--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,26 @@
 
   spring:
     datasource:
-      url: jdbc:mysql://localhost:3306/foodmap?serverTimezone=UTC&characterEncoding=UTF-8
+      url: jdbc:log4jdbc:mysql://localhost:3306/foodmap?serverTimezone=UTC&characterEncoding=UTF-8
       username: foodmap
       password: java1234
-      driver-class-name: com.mysql.cj.jdbc.Driver
+      driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+
 
   server:
     port: 8095
+
+  mybatis:
+    type-aliases-package: pairproject.foodmap.dto
+    mapper-locations: static/mapper/*.xml
+
+  logging:
+    level:
+      jdbc:
+        sqlonly: DEBUG
+        audit: off
+        resultset: off
+        connection: off
+
+
+      org.springframework.web: DEBUG
