--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,23 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/foodmap?serverTimezone=UTC&characterEncoding=UTF-8
+    username: foodmap
+    password: java1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
-  spring:
-    datasource:
-      url: jdbc:mysql://localhost:3306/foodmap?serverTimezone=UTC&characterEncoding=UTF-8
-      username: foodmap
-      password: java1234
-      driver-class-name: com.mysql.cj.jdbc.Driver
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
 
-  server:
-    port: 8095
+server:
+  port: 8095
+
+file:
+  image:
+    path: C:\foodmap\image\
+
+mybatis:
+  mapper-locations: classpath:/mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
