--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// Firebase Admin SDK
+//	implementation 'com.google.firebase:firebase-admin:7.0.0'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.modelmapper:modelmapper:2.4.4'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	implementation 'mysql:mysql-connector-java:8.0.27'
