--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	// Firebase Admin SDK
-//	implementation 'com.google.firebase:firebase-admin:7.0.0'
+	implementation 'com.google.firebase:firebase-admin:7.0.0'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.modelmapper:modelmapper:2.4.4'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
