Refactor: 파일 이동 및 불필요 파일, 코드 삭제
🔥 AlarmService.java 삭제
📝 dtomapper @Component 누락추가, mapper.xml 파일 이동, 의존성 설정 파일 정리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ file:
 
 mybatis:
   type-aliases-package: pairproject.foodmap.dto
-  mapper-locations: static/mapper/*.xml
+  mapper-locations: classpath:static/mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
 
